add general dongo owner attention
